--- a/templates/ethernet_Debian.j2
+++ b/templates/ethernet_Debian.j2
@@ -17,6 +17,11 @@ auto {{ item.device }}
 iface {{ item.device }}  inet dhcp
 {% endif %}
 
+{% if item.bootproto == 'manual' %}
+auto {{ item.device }}
+iface {{ item.device }}  inet manual
+{% endif %}
+
 {% if item.route is defined %}
 {% for i in item.route %}
 up route add -net {{ i.network }}  netmask {{ i.netmask }} gw {{ i.gateway }} dev {{ item.device }}
